<resources>
    <string name="app_name">Agatha Laundry</string>

    <string name="app_alias_name">Agatha Laundry Y</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="motto">Bersih, Aman dan Terpercaya</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>

    <string name="home_hello">Hello,</string>
    <string name="home_all_orders_btn">See All</string>
    <string name="home_active_orders">Active Orders</string>
    <string name="home_help">If you have any question or need help?</string>
    <string name="home_contact"><u>Contact us!</u></string>
    <string name="home_no_active_orders">No orders, lets order!</string>

    <string name="edit_profile_success">Profile Edited</string>

    <string name="order_package">Package - Duration</string>
    <string name="order_total_orders">Total Orders: %1$s</string>
    <string name="order_zero_orders">Total Orders: 0</string>
    <string name="order_dialog_add">Add</string>
    <string name="order_dialog_cancel">Cancel</string>
    <string name="order_service_added">Service Added</string>
    <string name="order_success">Order Success</string>

    <string name="detail_order">Detail Order</string>
    <string name="order_date_detail_order">Order Date:</string>
    <string name="estimate_detail_order">Estimate Date:</string>
    <string name="status_detail_order">Status:</string>

    <string name="login_button">Login</string>
    <string name="login_register">Dont have account? Register!</string>
    <string name="login_login_to_continue">Login to Continue</string>
    <string name="login_success">Login Success</string>

    <string name="logout_success">Logout Success</string>

    <string name="register_button">Register</string>
    <string name="register_login">Already have account? Login!</string>
    <string name="register_success">Register Success</string>

    <string name="history_active">Active</string>
    <string name="history_all">All</string>

    <string name="order_status_payment">Payment</string>
    <string name="order_status_picked_up">Picked Up</string>
    <string name="order_status_on_progress">On Progress</string>
    <string name="order_status_on_deliver">On Deliver</string>
    <string name="order_status_done">Done</string>
    <string name="order_status_cancel">Cancel</string>


</resources>