<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="36dp"
    tools:context=".ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_app_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_24"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_app_home"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_motto_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motto"
            app:layout_constraintStart_toStartOf="@+id/tv_app_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_home" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout_middle2_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_home"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_person_24"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_hello_home" />

            <TextView
                android:id="@+id/tv_hello_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_hello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_hello_home"
                app:layout_constraintTop_toBottomOf="@+id/tv_hello_home"
                tools:text="Muhammad Cakra Pandu" />

            <TextView
                android:id="@+id/tv_address_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/img_user_home"
                app:layout_constraintStart_toStartOf="@+id/tv_name_home"
                app:layout_constraintTop_toBottomOf="@+id/img_user_home"
                tools:text="Jln. Watugong, Kel. Kelurahan, Kec. Kecamatan, Kota Malang, Jawa Timur, 696969." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout_middle3_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_home"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_middle2_home">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tv_active_orders_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/home_active_orders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/btn_all_orders_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_all_orders_btn"
                app:layout_constraintBottom_toBottomOf="@+id/tv_active_orders_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_active_orders_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_active_orders_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_active_orders_home"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_order_active" />

            <TextView
                android:id="@+id/list_active_orders_empty_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_no_active_orders"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tv_active_orders_home"
                app:layout_constraintTop_toBottomOf="@+id/tv_active_orders_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_help_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_contact_home"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_contact"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="@+id/tv_help_home"
            app:layout_constraintStart_toStartOf="@+id/tv_help_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_help_home" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>