<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailorder.DetailOrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_detail_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_detail_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:titleTextColor="#FFFFFF"
            app:title="@string/detail_order" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_id_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_detail_order"
        tools:text="3c19a3e8-777b-4c38-bc1e-ba9ac4c1e9a8" />

    <TextView
        android:id="@+id/tv_order_date_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/order_date_detail_order"
        app:layout_constraintStart_toStartOf="@+id/tv_id_detail_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_detail_order"/>

    <TextView
        android:id="@+id/tv_created_at_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_estimate_detail_order"
        app:layout_constraintTop_toTopOf="@+id/tv_order_date_detail_order"
        tools:text="15 Juni 2024" />

    <TextView
        android:id="@+id/tv_estimate_date_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/estimate_detail_order"
        app:layout_constraintStart_toStartOf="@+id/tv_order_date_detail_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_date_detail_order" />

    <TextView
        android:id="@+id/tv_estimate_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_estimate_date_detail_order"
        app:layout_constraintTop_toTopOf="@+id/tv_estimate_date_detail_order"
        tools:text="16 Juni 2024" />

    <TextView
        android:id="@+id/tv_order_status_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/status_detail_order"
        app:layout_constraintStart_toStartOf="@+id/tv_estimate_date_detail_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_estimate_date_detail_order" />

    <TextView
        android:id="@+id/tv_status_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_estimate_detail_order"
        app:layout_constraintTop_toTopOf="@+id/tv_order_status_detail_order"
        tools:text="On Proggress" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_top_detail_order"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/list_detail_orders"
        app:layout_constraintStart_toStartOf="@+id/list_detail_orders"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_status_detail_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_detail_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_top_detail_order"
        tools:listitem="@layout/item_detail_order" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_bottom_detail_order"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="@+id/list_detail_orders"
        app:layout_constraintStart_toStartOf="@+id/list_detail_orders"
        app:layout_constraintTop_toBottomOf="@+id/list_detail_orders" />

    <TextView
        android:id="@+id/tv_total_detail_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_order_amount"
        app:layout_constraintStart_toStartOf="@+id/list_detail_orders"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_order_amount" />

    <TextView
        android:id="@+id/tv_detail_order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/divider_bottom_detail_order"
        app:layout_constraintTop_toBottomOf="@+id/divider_bottom_detail_order"
        tools:text="Rp. 12.000,00" />

    <ProgressBar
        android:id="@+id/pb_order_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>